--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.2"
   }
 }
